--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /problem1319.class
 /*.class
 SoftwareSecurity/VigenereCipher.class
+SoftwareSecurity/Frequency2.class
+SoftwareSecurity/FrequencyAnalysis.class
