--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ SoftwareSecurity/FrequencyAnalysis.class
 SoftwareSecurity/Question4.class
 SoftwareSecurity/Frequency2.class
 SoftwareSecurity/FrequencyAnalysis.class
+SoftwareSecurity/Problem3.class
